# CppProjectKickstarter

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json
ExampleProject/: Main.cpp
